<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LightWalker Remote</string>
    <string name="menu_settings">settings</string>
    <string name="btStatusLabel">bluetooth status:</string>

    <string-array name="btStatusValues">
        <item>-</item>
    </string-array>
    
    <string name="action_settings">settings</string>

    <string name="menu_bluetooth_settings">connect</string>
    <string name="menu_bluetooth_disconnect">disconnect</string>
    
    <string name="modeLabel">Mode</string>
    <string name="modeSparkleLabel">sparkle</string>
    <string name="modeGravityLabel">gravity</string>
    <string name="modeEqualizerLabel">equalizer</string>
    <string name="modeConfigButtonLabel">mode config</string>
    <string name="title_activity_mode_equalizer_config">Equalizer Mode Config</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mode_sparkle_config">Sparkle Mode Config</string>
    <string name="title_activity_mode_gravity_config">Gravity Mode Config</string>
    <string name="title_paired_devices">paired devices</string>
    <string name="title_other_devices">other devices</string>
    <string name="button_scan">scan for devices</string>
    <string name="none_paired">none paired</string>
    <string name="scanning">scanning…</string>
    <string name="select_device">select device</string>
    <string name="none_found">None found</string>
    <string name="commandHint">command to send</string>
    <string name="commandSend">send</string>
    <string name="title_connected_to">connected to </string>
    <string name="title_connecting">connecting…</string>
    <string name="title_not_connected">not connected</string>
    <string name="bt_not_enabled_leaving">Bluetooth is not enabled, exiting</string>
    
    <string name="bluetooth_response">LightWalker: </string>
    <string name="gravity_x_color">x color</string>
    <string name="gravity_y_color">y color</string>
    <string name="gravity_z_color">z color</string>
    <string name="gravity_rotate">rotate colors</string>
    <string name="pick_color">pick a color</string>
    <string name="title_activity_mode_pulse_config">ModePulseConfigActivity</string>
	<string name="modePulseLabel">pulse</string>
	<string name="pulse_color">pulse color</string>
	<string name="pulse_sync_legs">synchronize legs</string>
	<string name="pulse_min_pulse_rate_label">min pulse rate (ms)</string>
	<string name="pulse_max_pulse_rate_label">max pulse rate(ms)</string>
	<string name="pulse_min_pulse_rate">500</string>
	<string name="pulse_max_pulse_rate">3000</string>
	<string name="pulse_random_color">random color</string>
	
	<string name="mainLegsOn">got your legs on?</string>
	<string name="mainArmsOn">got your arms on?</string>
	<string name="mainMinBrightness">min brightness</string>
	<string name="mainMaxBrightness">max brightness</string>
	
	
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
     
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
</resources>