<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModePulseConfigActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/headerbackground"
        android:text="@string/modePulseLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="#2B3856" />

    <Button
        android:id="@+id/buttonColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onColorButtonClick"
        android:text="@string/pulse_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewMinPulseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pulse_min_pulse_rate_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextMinPulseTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/pulse_min_pulse_rate" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewMaxPulseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pulse_max_pulse_rate_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextMaxPulseTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/pulse_max_pulse_rate" >

            <requestFocus />
        </EditText>

    </LinearLayout>

</LinearLayout>